--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,27 @@ before_script:
 cache: bundler
 rvm:
   - 2.0.0
-  - 2.1.8
-  - 2.2.4
-  - 2.3.0
-  - ruby-head
+  - 2.1.10
+  - 2.2.5
+  - 2.3.1
+  - 2.4.0-preview2
 gemfile:
   - gemfiles/rails3.gemfile
   - gemfiles/rails40.gemfile
   - gemfiles/rails41.gemfile
   - gemfiles/rails42.gemfile
-notifications:
-  emails:
-    - tsukasa.oishi@gmail.com
-before_install: gem install bundler -v 1.10.5
+  - gemfiles/rails50.gemfile
+matrix:
+  exclude:
+    - rvm: 2.0.0
+      gemfile: gemfiles/rails50.gemfile
+    - rvm: 2.1.10
+      gemfile: gemfiles/rails50.gemfile
+    - rvm: 2.3.1
+      gemfile: gemfiles/rails40.gemfile
+    - rvm: 2.4.0-preview2
+      gemfile: gemfiles/rails40.gemfile
+  allow_failures:
+    - rvm: 2.4.0-preview2
+  fast_finish: true
+bundler_args: --jobs 3 --retry 3
