--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,12 @@ matrix:
       gemfile: gemfiles/rails50.gemfile
     - rvm: 2.3.1
       gemfile: gemfiles/rails40.gemfile
+    - rvm: 2.3.1
+      gemfile: gemfiles/rails3.gemfile
     - rvm: 2.4.0-preview2
       gemfile: gemfiles/rails40.gemfile
+    - rvm: 2.4.0-preview2
+      gemfile: gemfiles/rails3.gemfile
   allow_failures:
     - rvm: 2.4.0-preview2
   fast_finish: true
